fix: import error

--- a/miniprogram/packageComponent/pages/media/camera/camera.wxml
+++ b/miniprogram/packageComponent/pages/media/camera/camera.wxml
@@ -1,5 +1,5 @@
-<import src="../../../common/head.wxml" />
-<import src="../../../common/foot.wxml" />
+<import src="../../../../common/head.wxml" />
+<import src="../../../../common/foot.wxml" />
 
 <mp-navigation-bar title="camera" back="{{true}}"></mp-navigation-bar>
 <scroll-view class="page-scroll-view" scroll-y type="list">
