--- a/miniprogram/page/API/components/set-tab-bar/set-tab-bar.wxml
+++ b/miniprogram/page/API/components/set-tab-bar/set-tab-bar.wxml
@@ -3,8 +3,8 @@
 <import src="/common/foot.wxml" />
 <!-- end of workaround -->
 
-<import src="../../../common/head.wxml" />
-<import src="../../../common/foot.wxml" />
+<import src="../../../../common/head.wxml" />
+<import src="../../../../common/foot.wxml" />
 
 <view class="container page" data-weui-theme="{{theme}}">
   <template is="head" data="{{title: 'tabBar'}}"/>
