--- a/miniprogram/packageCloud/pages/scf/scf-openapi/scf-openapi.wxml
+++ b/miniprogram/packageCloud/pages/scf/scf-openapi/scf-openapi.wxml
@@ -1,5 +1,5 @@
-<import src="../../../common/head.wxml" />
-<import src="../../../common/foot.wxml" />
+<import src="../../../../common/head.wxml" />
+<import src="../../../../common/foot.wxml" />
 
 <view class="container page" data-weui-theme="{{theme}}">
   <template is="head" data="{{title: '云函数中使用微信开放能力'}}" />
