--- a/miniprogram/packageComponent/pages/open/open-data/open-data.wxml
+++ b/miniprogram/packageComponent/pages/open/open-data/open-data.wxml
@@ -1,5 +1,5 @@
-<import src="../../../common/head.wxml" />
-<import src="../../../common/foot.wxml" />
+<import src="../../../../common/head.wxml" />
+<import src="../../../../common/foot.wxml" />
 
 <!--
       <open-data type="userAvatarUrl" lang="zh_CN"></open-data>
