--- a/miniprogram/packageComponent/pages/media/camera-scan-code/camera-scan-code.less
+++ b/miniprogram/packageComponent/pages/media/camera-scan-code/camera-scan-code.less
@@ -1,7 +1,7 @@
-
+// @import "../../../../common/lib/weui.wxss";
 
 camera {
-  height: 250px;
+  height: 500rpx;
 }
 
 .btn-area {
@@ -9,13 +9,13 @@ camera {
 }
 
 form {
-  margin-top: 15px;
+  margin-top: 30rpx;
 }
 
 .weui-cell__bd {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 10px 0;
-  min-height: 30px;
+  padding: 20rpx 0;
+  min-height: 60rpx;
 }
