--- a/miniprogram/packageComponent/pages/media/camera-scan-code/camera-scan-code.wxml
+++ b/miniprogram/packageComponent/pages/media/camera-scan-code/camera-scan-code.wxml
@@ -1,7 +1,7 @@
 <import src="../../../../common/head.wxml" />
 <import src="../../../../common/foot.wxml" />
 
-<view class="container page" data-weui-theme="{{theme}}">
+<view class="container">
   <template is="head" data="{{title: 'camera'}}"/>
 
   <view class="page-body">
