--- a/miniprogram/packageComponent/pages/media/camera/camera.wxml
+++ b/miniprogram/packageComponent/pages/media/camera/camera.wxml
@@ -45,9 +45,11 @@
         <button type="primary" bindtap="stopRecord">结束录像</button>
       </view>
       <view class="btn-area">
-        <navigator url="/packageComponent/pages/media/camera-scan-code/camera-scan-code" hover-class="none">
-          <button type="primary">扫描一维码</button>
-        </navigator>
+        <button type="primary">
+          <navigator url="/packageComponent/pages/media/camera-scan-code/camera-scan-code" hover-class="none">
+            <text>扫描一维码</text>
+          </navigator>
+        </button>
       </view>
       <view class="preview-tips">点击录像或拍照即可在下方预览效果</view>
       <image wx:if="{{src}}" mode="widthFix" class="photo" src="{{src}}"></image>
