--- a/miniprogram/packageAPI/pages/ar/gaussian-splatting/gaussian-splatting.wxml
+++ b/miniprogram/packageAPI/pages/ar/gaussian-splatting/gaussian-splatting.wxml
@@ -2,20 +2,20 @@
 <view class="page" data-weui-theme="{{theme}}">
   <view
     class="canvas-wrap" style="width: {{widthScale * 100}}%; height: {{heightScale * 100}}%"
-  >
-    <xr-frame-render-canvas
-      disable-scroll
-      id="canvas"
-      width="{{width}}"
-      height="{{height}}"
-      style="width:{{domWidth}}px;height:{{domHeight}}px;"
-      bind:sceneReady="handleXRSceneReady"
-    ></xr-frame-render-canvas>
-
-  </view>
-
-  <view class="hint-bottom page-body-text tc">
-    <text>提示：渲染高斯溅射产物</text>
+  > 
+    <view wx:if="{{renderByXRFrame}}">
+      <xr-frame-render-canvas
+        disable-scroll
+        id="canvas"
+        width="{{width}}"
+        height="{{height}}"
+        style="width:{{domWidth}}px;height:{{domHeight}}px;"
+        bind:sceneReady="handleXRSceneReady"
+      ></xr-frame-render-canvas>
+    </view>
+    <view wx:if="{{renderByWebGL2}}">
+      <canvas type="webgl2" id="canvas" bindtouchstart="onTouchStartWebGL" bindtouchmove="onTouchMoveWebGL"></canvas>
+    </view>
   </view>
 </view>
 
