--- a/miniprogram/packageAPI/pages/ar/gaussian-splatting/gaussian-splatting.wxss
+++ b/miniprogram/packageAPI/pages/ar/gaussian-splatting/gaussian-splatting.wxss
@@ -20,26 +20,67 @@
   height: 100%;
 }
 
-
-.hint-bottom {
+.control-wrap {
   position: absolute;
-  left: 20px;
-  right: 20px;
-  bottom: 20px;
-  padding: 5px 10px;
-  font-size: 14px;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 6px;
+  right: 20rpx;
+  top: 20rpx;
+  padding: 10rpx 20rpx;
+  width: 180rpx;
+  height: 510rpx;
+  background-color: rgba(50, 50, 50, 0.6);
+  border-radius: 10rpx;
 }
 
-.hint-bottom .btn-wrap {
+.control-wrap .block {
+  width: 100%;
   display: flex;
+  flex-direction: column;
 }
 
-.hint-bottom .btn{
+.control-wrap .btn {
+  width: 100%;
   flex: 1;
-  margin: 10px 5px;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 20rpx;
+  margin-bottom: 14rpx;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
+}
+
+.input-wrap {
+  position: absolute;
+  left: 20rpx;
+  right: 260rpx;
+  top: 20rpx;
+  padding: 10rpx 20rpx;
+  height: 200rpx;
+  background-color: rgba(50, 50, 50, 0.6);
+  border-radius: 10rpx;
+}
+.input-wrap .slider {
+  margin-bottom: 30rpx;
+}
+
+.input-wrap .checkbox-wrap {
+  width: 100%;
+  text-align: center;
+}
+
+.checkbox-wrap .words {
+  vertical-align: middle;
+  color: #fff;
+  font-size: 30rpx;
+  font-weight: bold;
+}
+.checkbox-wrap .checkbox {
+  vertical-align: middle;
+  margin-left: 20rpx;
+}
+
+.control-wrap .title, .input-wrap .title {
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  font-size: 24rpx;
+  font-weight: bold;
+  margin-bottom: 10rpx;
 }
