--- a/miniprogram/packageAPI/pages/ar/gaussian-splatting/gaussian-splatting.wxss
+++ b/miniprogram/packageAPI/pages/ar/gaussian-splatting/gaussian-splatting.wxss
@@ -1,7 +1,7 @@
 .canvas-wrap {
   position: relative;
   width: 100%;
-  background-color: #000;
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 }
 
 .canvas-wrap canvas {
