--- a/miniprogram/packageExtend/pages/base/icons/icons.wxss
+++ b/miniprogram/packageExtend/pages/base/icons/icons.wxss
@@ -39,3 +39,15 @@ icon{
     font-size: 18px;
     margin: 5px 0;
 }
+
+/** skyline 不支持 float: left */
+.weui-grids {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+/** skyline 不支持 float: left */
+.weui-grid {
+	float: none;
+}
