--- a/miniprogram/packageExtend/pages/navigation/tabbar/tabbar.wxml
+++ b/miniprogram/packageExtend/pages/navigation/tabbar/tabbar.wxml
@@ -1,7 +1,14 @@
 <view class="page" data-weui-theme="{{theme}}">
-    <view class="page__hd">
-        <view class="page__title">Tabbar</view>
-        <view class="page__desc">类似小程序原生tabbar的组件，可用于自定义tabbar</view>
-    </view>
-    <mp-tabbar style="position:fixed;bottom:0;width:100%;left:0;right:0;" list="{{list}}" bindchange="tabChange"></mp-tabbar>
+    <mp-navigation-bar title="Tabbar"></mp-navigation-bar>
+    <scroll-view type="list" scroll-y class="page-height">
+        <view class="page__hd">
+            <view class="page__title">Tabbar</view>
+            <view class="page__desc">类似小程序原生tabbar的组件，可用于自定义tabbar</view>
+        </view>
+        <root-portal>
+            <view class="tabbar-container">
+                <mp-tabbar class="tabbar" list="{{list}}" bindchange="tabChange"></mp-tabbar>
+            </view>
+        </root-portal>
+    </scroll-view>
 </view>
