--- a/miniprogram/packageExtend/pages/navigation/tabbar/tabbar.wxss
+++ b/miniprogram/packageExtend/pages/navigation/tabbar/tabbar.wxss
@@ -1,2 +1,39 @@
-/* example/tabbar/tabbar.wxss */
 @import '../../common.wxss';
+
+/* example/tabbar/tabbar.wxss */
+
+
+/* @media only screen and (min-width: 450px) {
+  .page__hd {
+    margin-left: 60px;
+  }
+
+  .tabbar {
+    position:fixed;
+    top: 0;
+    bottom:0;
+    width: unset;
+    height: 100%;
+    left:0;
+    right: unset;
+  }
+} */
+
+.tabbar-container {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.tabbar {
+  display: fixed;
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  left: 0;
+  right: 0;
+}
