--- a/miniprogram/packageExtend/pages/operate/half-screen-dialog/half-screen-dialog.wxml
+++ b/miniprogram/packageExtend/pages/operate/half-screen-dialog/half-screen-dialog.wxml
@@ -1,4 +1,6 @@
 <view class="page" data-weui-theme="{{theme}}">
+  <mp-navigation-bar title="Half Screen Dialog"></mp-navigation-bar>
+  <scroll-view type="list" scroll-y class="page-height">
     <view class="page__hd">
         <view class="page__title">Half Screen Dialog</view>
         <view class="page__desc">半屏弹窗，辅助完成当前页面任务时；提醒用户并引导用户的下一步操作；用户主动发起的任务时。</view>
@@ -6,8 +8,8 @@
     <view class="page__bd">
         <view class="weui-btn-area">
             <button class="weui-btn" type="primary" bindtap="openTypeF">样式一</button>
-            <button class="weui-btn" type="primary" bindtap="openTypeS">样式二</button>
-            <button class="weui-btn" type="primary" bindtap="openTypeT">样式三</button>
+            <button class="weui-btn mrt16" type="primary" bindtap="openTypeS">样式二</button>
+            <button class="weui-btn mrt16" type="primary" bindtap="openTypeT">样式三</button>
         </view>
         <mp-halfScreenDialog show="{{typeF}}">
           <view slot="title">测试标题A</view>
@@ -25,15 +27,16 @@
             <button type="primary" class="weui-btn">按钮B</button>
           </view>
         </mp-halfScreenDialog>
-        <mp-halfScreenDialog 
+        <mp-halfScreenDialog
           bindbuttontap="buttontap"
           show="{{typeS}}"
-          maskClosable="{{false}}" 
-          title="测试标题B" 
+          maskClosable="{{false}}"
+          title="测试标题B"
           subTitle="测试标题B的副标题"
           desc="辅助描述内容，可根据实际需要安排"
           tips="辅助提示内容，可根据实际需要安排"
           buttons="{{buttons}}"
         ></mp-halfScreenDialog>
     </view>
+  </scroll-view>
 </view>
