--- a/miniprogram/packageExtend/pages/base/flex/flex.wxml
+++ b/miniprogram/packageExtend/pages/base/flex/flex.wxml
@@ -1,31 +1,34 @@
 <view class="page" data-weui-theme="{{theme}}">
-    <view class="page__hd">
-        <view class="page__title">Flex</view>
-        <view class="page__desc">Flex布局</view>
-    </view>
-    <view class="page__bd page__bd_spacing">
-        <view class="weui-flex">
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+    <mp-navigation-bar title="Flex"></mp-navigation-bar>
+    <scroll-view type="list" scroll-y class="page-height">
+        <view class="page__hd">
+            <view class="page__title">Flex</view>
+            <view class="page__desc">Flex布局</view>
         </view>
-        <view class="weui-flex">
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+        <view class="page__bd page__bd_spacing">
+            <view class="weui-flex">
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+            </view>
+            <view class="weui-flex">
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+            </view>
+            <view class="weui-flex">
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+            </view>
+            <view class="weui-flex">
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+            </view>
+            <view class="weui-flex">
+                <view><view class="placeholder">weui</view></view>
+                <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+                <view><view class="placeholder">weui</view></view>
+            </view>
         </view>
-        <view class="weui-flex">
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-        </view>
-        <view class="weui-flex">
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-        </view>
-        <view class="weui-flex">
-            <view><view class="placeholder">weui</view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view><view class="placeholder">weui</view></view>
-        </view>
-    </view>
+    </scroll-view>
 </view>
