--- a/miniprogram/packageExtend/pages/base/footer/footer.wxml
+++ b/miniprogram/packageExtend/pages/base/footer/footer.wxml
@@ -1,36 +1,38 @@
 <view class="page" data-weui-theme="{{theme}}">
-    <view class="page__hd">
-        <view class="page__title">Footer</view>
-        <view class="page__desc">页脚</view>
-    </view>
-    <view class="page__bd page__bd_spacing">
-        <view class="weui-footer">
-            <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
+    <mp-navigation-bar title="Footer"></mp-navigation-bar>
+    <scroll-view type="list" scroll-y class="page-height">
+        <view class="page__hd">
+            <view class="page__title">Footer</view>
+            <view class="page__desc">页脚</view>
         </view>
-
-
-        <view class="weui-footer">
-            <view class="weui-footer__links">
-                <navigator url="" class="weui-footer__link">底部链接</navigator>
+        <view class="page__bd page__bd_spacing">
+            <view class="weui-footer">
+                <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
             </view>
-            <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
-        </view>
 
 
-        <view class="weui-footer">
-            <view class="weui-footer__links">
-                <navigator url="" class="weui-footer__link">底部链接</navigator>
-                <navigator url="" class="weui-footer__link">底部链接</navigator>
+            <view class="weui-footer">
+                <view class="weui-footer__links">
+                    <navigator url="" class="weui-footer__link">底部链接</navigator>
+                </view>
+                <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
             </view>
-            <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
-        </view>
 
 
-        <view class="weui-footer weui-footer_fixed-bottom">
-            <view class="weui-footer__links">
-                <navigator url="" class="weui-footer__link">WeUI首页</navigator>
+            <view class="weui-footer">
+                <view class="weui-footer__links">
+                    <navigator url="" class="weui-footer__link">底部链接</navigator>
+                    <navigator url="" class="weui-footer__link">底部链接</navigator>
+                </view>
+                <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
             </view>
-            <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
+
+            <view class="weui-footer weui-footer_fixed-bottom">
+                <view class="weui-footer__links">
+                    <navigator url="" class="weui-footer__link">WeUI首页</navigator>
+                </view>
+                <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
+            </view>
         </view>
-    </view>
+    </scroll-view>
 </view>
