--- a/miniprogram/packageExtend/pages/base/icons/icons.wxml
+++ b/miniprogram/packageExtend/pages/base/icons/icons.wxml
@@ -1,30 +1,33 @@
 <view class="page" data-weui-theme="{{theme}}">
-    <view class="page__hd">
-        <view class="page__title">Icons</view>
-        <view class="page__desc">图标</view>
-    </view>
-    <view class="page__bd">
-        <view class="icon-box">
-            <view class="icon-box__title">描边型</view>
-            <view class="weui-grids">
-                <block wx:for="{{iconList}}" wx:key="*this">
-                    <navigator url="" class="weui-grid">
-                        <mp-icon icon="{{item.icon}}" color="{{item.color}}" size="{{item.size}}"></mp-icon>
-                        <view class="weui-grid__label">{{item.icon}}</view>
-                    </navigator>
-                </block>
+    <mp-navigation-bar title="Icons"></mp-navigation-bar>
+    <scroll-view type="list" scroll-y class="page-height">
+        <view class="page__hd">
+            <view class="page__title">Icons</view>
+            <view class="page__desc">图标</view>
+        </view>
+        <view class="page__bd">
+            <view class="icon-box">
+                <view class="icon-box__title">描边型</view>
+                <view class="weui-grids">
+                    <block wx:for="{{iconList}}" wx:key="*this">
+                        <view class="weui-grid">
+                            <mp-icon icon="{{item.icon}}" color="{{item.color}}" size="{{item.size}}"></mp-icon>
+                            <view class="weui-grid__label">{{item.icon}}</view>
+                        </view>
+                    </block>
+                </view>
+            </view>
+            <view class="icon-box">
+                <view class="icon-box__title">填充型</view>
+                <view class="weui-grids">
+                    <block wx:for="{{iconList}}" wx:key="*this">
+                        <view class="weui-grid">
+                            <mp-icon type="filled" icon="{{item.icon}}" color="{{item.color}}" size="{{item.size}}"></mp-icon>
+                            <view class="weui-grid__label">{{item.icon}}</view>
+                        </view>
+                    </block>
+                </view>
             </view>
         </view>
-        <view class="icon-box">
-            <view class="icon-box__title">填充型</view>
-            <view class="weui-grids">
-                <block wx:for="{{iconList}}" wx:key="*this">
-                    <navigator url="" class="weui-grid">
-                        <mp-icon type="filled" icon="{{item.icon}}" color="{{item.color}}" size="{{item.size}}"></mp-icon>
-                        <view class="weui-grid__label">{{item.icon}}</view>
-                    </navigator>
-                </block>
-            </view>
-        </view>
-    </view>
+    </scroll-view>
 </view>
