--- a/miniprogram/packageExtend/pages/common.wxss
+++ b/miniprogram/packageExtend/pages/common.wxss
@@ -1,134 +1,27 @@
-/*!
- * WeUI v2.3.0 (https://github.com/weui/weui-wxss)
- * Copyright 2020 Tencent, Inc.
- * Licensed under the MIT license
- */
-/* @import '../components/weui-wxss/dist/style/weui.wxss'; */
-
-page {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-}
-
 .page {
-  min-height: 100%;
-  background-color: var(--weui-BG-1);
-  color: var(--weui-FG-0);
-  font-size: 16px;
-  font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
-  max-width: 600px;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
 }
-
-image {
-  max-width: 100%;
-  max-height: 100%
+.page-height {
+  height: 100%;
+  flex: 1 1 0;
+  overflow: hidden;
 }
-
-.link {
+navigator text,
+text text,
+text navigator {
   display: inline;
-  color: var(--weui-LINK)
+}
+.wx-scroll-view-flex:is(div):not(.wx-scroll-view-flex) {
+  width: auto !important;
 }
 
-.fadeIn {
-  -webkit-animation: a .3s forwards;
-  animation: a .3s forwards
-}
-
-.fadeOut {
-  -webkit-animation: b .3s forwards;
-  animation: b .3s forwards
-}
-
-@-webkit-keyframes a {
-  0% {
-    opacity: 0
-  }
-
-  to {
-    opacity: 1
-  }
-}
-
-@keyframes a {
-  0% {
-    opacity: 0
-  }
-
-  to {
-    opacity: 1
-  }
-}
-
-@-webkit-keyframes b {
-  0% {
-    opacity: 1
-  }
-
-  to {
-    opacity: 0
-  }
-}
-
-@keyframes b {
-  0% {
-    opacity: 1
-  }
-
-  to {
-    opacity: 0
-  }
-}
-
-.weui-msg__extra-area {
-  position: static
-}
-
-.page__hd {
-  padding: 40px
-}
-
-.page__bd {
-  padding-bottom: 40px
-}
-
-.page__bd_spacing {
-  padding-left: 15px;
-  padding-right: 15px
-}
-
-.page__ft {
-  padding-top: 40px;
-  padding-bottom: 10px;
-  padding-bottom: calc(10px + constant(safe-area-inset-bottom));
-  padding-bottom: calc(10px + env(safe-area-inset-bottom));
-  text-align: center
-}
-
-[data-weui-theme=dark] .page__ft image {
-  -webkit-filter: invert(100) hue-rotate(180deg);
-  filter: invert(100) hue-rotate(180deg)
-}
-
-.page__title {
-  text-align: left;
-  font-size: 20px;
-  font-weight: 400
-}
-
-.page__desc {
-  margin-top: 5px;
-  color: var(--weui-FG-1);
-  text-align: left;
-  font-size: 14px
-}
-
-.weui-cell_example:before {
-  left: 52px
-}
+page{height:100%}.page{min-height:100%;background-color:var(--weui-BG-0);color:var(--weui-FG-0);font-size:0.9411764705882353rem;font-family:system-ui,-apple-system,Helvetica Neue,sans-serif}image{max-width:100%;max-height:100%}.link{display:inline;color:var(--weui-LINK)}.fadeIn{-webkit-animation:fadeIn .3s forwards;animation:fadeIn .3s forwards}.fadeOut{-webkit-animation:fadeOut .3s forwards;animation:fadeOut .3s forwards}@-webkit-keyframes fadeIn{0%{opacity:0}100%{opacity:1}}@keyframes fadeIn{0%{opacity:0}100%{opacity:1}}@-webkit-keyframes fadeOut{0%{opacity:1}100%{opacity:0}}@keyframes fadeOut{0%{opacity:1}100%{opacity:0}}.weui-msg__extra-area{position:static}.page__hd{padding:40px}.page__bd{padding-bottom:40px}.page__bd_spacing{padding-left:15px;padding-right:15px}.page__ft{padding-top:20px;padding-bottom:10px;padding-bottom:calc(10px + constant(safe-area-inset-bottom));padding-bottom:calc(10px + env(safe-area-inset-bottom));text-align:center}[data-weui-theme="dark"] .page__ft image{-webkit-filter:invert(100) hue-rotate(180deg);filter:invert(100) hue-rotate(180deg)}.page__title{text-align:left;font-size:1.1764705882352942rem;font-weight:400}.page__desc{margin-top:5px;color:var(--weui-FG-1);text-align:left;font-size:0.8235294117647058rem}.weui-cell_example::before{left:52px}.page_bottom_tips{color:var(--weui-FG-4);font-size:0.7058823529411765rem;line-height:1.4;margin-top:4px}
 
 @media (prefers-color-scheme: dark) {
-  page {
-    background-color: #1F1F1F;
-  }
+	page {
+			background-color: #1f1f1f;
+	}
 }
