--- a/miniprogram/packageExtend/pages/operate/msg/msg_fail.wxml
+++ b/miniprogram/packageExtend/pages/operate/msg/msg_fail.wxml
@@ -1,4 +1,5 @@
 <view class="page" data-weui-theme="{{theme}}">
+    <mp-navigation-bar title="Msg"></mp-navigation-bar>
     <mp-msg type="warn" title="操作失败">
         <view slot="desc">内容详情，可根据实际需要安排，如果换行则不超过规定长度，居中展现<navigator url="" class="weui-msg__link">文字链接</navigator></view>
         <view slot="extend">
