--- a/miniprogram/packageComponent/pages/content/rich-text/rich-text.wxml
+++ b/miniprogram/packageComponent/pages/content/rich-text/rich-text.wxml
@@ -1,6 +1,7 @@
 <import src="../../../../common/head.wxml" />
 <import src="../../../../common/foot.wxml" />
-
+<mp-navigation-bar title="rich-text" back="{{true}}"></mp-navigation-bar>
+<scroll-view class="page-scroll-view" scroll-y type="list">
 <view class="container page" data-weui-theme="{{theme}}">
   <template is="head" data="{{title: 'rich-text'}}"/>
 
@@ -8,7 +9,7 @@
     <view class="page-section">
       <view class="page-section-title">通过HTML String渲染</view>
       <view class="page-content">
-        <scroll-view scroll-y>{{htmlSnip}}</scroll-view>
+        <scroll-view class="page-scroll" scroll-y>{{htmlSnip}}</scroll-view>
         <button type="primary" bindtap="renderHtml">渲染HTML</button>
         <block wx:if="{{renderedByHtml}}">
           <rich-text nodes="{{htmlSnip}}"></rich-text>
@@ -19,7 +20,7 @@
     <view class="page-section">
       <view class="page-section-title">通过节点渲染</view>
       <view class="page-content">
-        <scroll-view scroll-y>{{nodeSnip}}</scroll-view>
+        <scroll-view class="page-scroll" scroll-y>{{nodeSnip}}</scroll-view>
         <button type="primary" bindtap="renderNode">渲染Node</button>
         <block wx:if="{{renderedByNode}}">
           <rich-text nodes="{{nodes}}"></rich-text>
@@ -30,3 +31,4 @@
 
   <template is="foot" />
 </view>
+</scroll-view>
