--- a/miniprogram/packageComponent/pages/form/button/button.wxml
+++ b/miniprogram/packageComponent/pages/form/button/button.wxml
@@ -34,8 +34,11 @@
       <button type="primary" open-type="contact" bindcontact="handleContact" show-message-card="{{true}}" send-message-title="临时会话">打开客服会话</button>
       <button type="primary" open-type="share">触发用户转发</button>
       <button type="primary" open-type="getPhoneNumber" bindgetphonenumber="handleGetPhoneNumber">获取用户手机号</button>
+      <button type="primary" open-type="getRealtimePhoneNumber">用户手机号实时验证</button>
       <button wx:if="{{canIUseGetUserProfile}}" type="primary" lang="zh_CN" bindtap="handleGetUserProfile"> 获取用户信息 </button>
       <button wx:else type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="handleGetUserInfo">获取用户信息</button>
+      <button type="primary" open-type="chooseAvatar" bindchooseavatar="handleChooseavatar">获取用户头像</button>
+      <button type="primary" open-type="launchApp" app-parameter="wechat" binderror="launchAppError">打开APP</button>
       <button type="primary" open-type="openSetting" bindopensetting="handleOpenSetting">打开设置授权页</button>
       <button type="primary" open-type="feedback">打开意见反馈</button>
     </view>
