--- a/miniprogram/packageComponent/pages/form/checkbox/checkbox.wxss
+++ b/miniprogram/packageComponent/pages/form/checkbox/checkbox.wxss
@@ -1,3 +1,8 @@
+@import "../../../../common/reset.wxss";
+@import '../../../../common//lib/weui.wxss';
 .checkbox{
   margin-right: 10px;
+}
+.page-section-content{
+  padding: 0 20px;
 }
