--- a/miniprogram/packageSkyline/pages/worklet/bottom-sheet/index.wxml
+++ b/miniprogram/packageSkyline/pages/worklet/bottom-sheet/index.wxml
@@ -1,15 +1,17 @@
 <!-- index.wxml -->
 <mp-navigation-bar title="手势协商" back="{{true}}"></mp-navigation-bar>
-<view class="page-container">
+<scroll-view class="page-scroll-view" type="list" scroll-top="0">
+	<view class="page-container">
 		<view class="place-hodler-widget"/>
 		<pan-gesture-handler id="pan" worklet:should-response-on-move="shouldPanResponse" simultaneousHandlers="{{['scroll']}}" worklet:ongesture="handlePan">
-				<vertical-drag-gesture-handler id="scroll" native-view="scroll-view" worklet:should-response-on-move="shouldScrollViewResponse" simultaneousHandlers="{{['pan']}}">
-						<scroll-view class="list-wrp" scroll-y bounces="{{false}}" refresher-enabled="{{false}}" worklet:adjust-deceleration-velocity="adjustDecelerationVelocity" bindscroll="handleScroll" type="list">
-								<view class="item" wx:for="{{list}}">
-										<view class="avatar"/>
-										<view class="comment"/>
-								</view>
-						</scroll-view>
-				</vertical-drag-gesture-handler>
+			<vertical-drag-gesture-handler id="scroll" native-view="scroll-view" worklet:should-response-on-move="shouldScrollViewResponse" simultaneousHandlers="{{['pan']}}">
+				<scroll-view class="list-wrp" scroll-y bounces="{{false}}" refresher-enabled="{{false}}" worklet:adjust-deceleration-velocity="adjustDecelerationVelocity" bindscroll="handleScroll" type="list">
+					<view class="item" wx:for="{{list}}">
+						<view class="avatar"/>
+						<view class="comment"/>
+					</view>
+				</scroll-view>
+			</vertical-drag-gesture-handler>
 		</pan-gesture-handler>
-</view>
+	</view>
+</scroll-view>
